--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-iot-device-sdk": "^2.2.6",
     "aws-sdk": "^2.875.0",
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
