--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -12,6 +12,7 @@
     "aws-iot-device-sdk": "^2.2.6",
     "aws-sdk": "^2.875.0",
     "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1"
   }
